hledger/test/errors/csvstatusparse.csv.rules
skip 2
date %1
status %2
